style.css
:root {
    --base-color: white;
    --base-palette: #e5dedd;
    --text-color:#333;
    --secondary-text: #555;
    --accent-color: #c3492c;
    --secondary-accent-color: #a53e24;
    --colour-big-heading: white;
    --nav-text-color: white;
}

.darkmode {
    --base-color: #241515;
    --base-palette: #4a4a4a;
    --text-color:#ffffff;
    --secondary-text: #b8b8b8;
    --accent-color: #d67157;
    --secondary-accent-color: #aa3619;
    --colour-big-heading: white;
    --nav-text-color: white;
}

/* Toggle button styles */
#theme-toggle {
    background-color: transparent;
    border: none;
    padding: 14px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    cursor: pointer;
    position: sticky;
}

#theme-toggle i:last-child {
    display: none;
}

.darkmode #theme-toggle i:first-child{
    display: none;
}

.darkmode #theme-toggle i:last-child{
    display: block;
}
#theme-toggle:hover {
    background-color: #a53e24;
}

/* Icon style */
#theme-icon {
    font-size: 30px;
}

* {
        margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
  overflow-x: hidden;
  width: 100%;
}
body {
    font-family: 'Lato', sans-serif;
    background: var(--base-color);
    color: var(--text-color);
    width: 100%;
    overflow-x: hidden;
}

html, body {
    overflow: visible;
    /* overflow-x: hidden; */
}

/* Styling the Navigation Bar */


.navdiv {
    display: flex;
    align-items: baseline;
    justify-content: space-between;
    padding: 12px 50px;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
    background: transparent;
    transition: color 0.8s ease-in-out;
    overflow: hidden;
}

nav ul {
    list-style: none;
    display: flex;
    gap: 30px;
    /* margin: 0;
    padding: 0; */


}

nav ul li a {
    font-size: 18px;
    color: var(--nav-text-color);
    text-decoration: none;
    position: relative;

} 
nav ul li a::after,
.sidebar li a::after {
    content: '';
    width: 0%;
    height: 2px;
    background: #C3492C;
    display: block;
    margin: auto;
    transition: width 0.5s ease;
}

nav ul li a:hover::after,
.sidebar li a:hover::after {
    width: 100%;
}


.logo h1 {
    font-family: 'Playfair Display',serif;
    font-size: 32px;
    color: var(--colour-big-heading);
    transition: 0.5s;
    /* margin: 0;
    line-height: 1.2; */

}
.logo a{
    text-decoration: none;
}

.logo  :hover{
    color: #C3492C;
    transform: scale(1.1);
    transition: 0.2s;
}

.navdiv.scrolled {
    background-color: #743322;
    opacity: 0.98;
}

.titlecontent{
    color: var(--base-color);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-60%);
    text-align: center;
    overflow: hidden;

}

.titlecontent h1 {
    color: var(--colour-big-heading);
    font-size: 70px;
    font-family: 'Playfair Display', serif;
    font-weight: 800;
}

.sidebar {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 2000;
    background-color: rgba(171, 164, 164, 0.206);
    backdrop-filter: blur(10px);
    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.15);
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    padding: 80px 10%;
}

.sidebar li {
    width: 100%;
}
.sidebar a{
    width: 100%;
    text-align: center;
    position: relative;
}

.menu-button {
    display: none;
}

@media(max-width: 400px) {
    .hideOnMobile {
        display: none;
    }

    .menu-button {
        display: block;
    }
    .sidebar{
        width: 100%;
    }

    #theme-toggle {
        padding: 9px 0px;
    }

    .logo{
        padding: 9px 0px;

    }

    
    
}

/* @media(max-width: 400px){
    .sidebar{
        width: 100%;
    }
} */




/* Styling Navigation finish here */

.homepage-about {
    display: flex;
    align-items: center;
    padding: 60px 10%;
    background-color:var(--base-color);
    gap: 40px;
    flex-wrap: wrap;
    overflow: hidden;
}

.homepage-about-left {
    flex: 1;
    max-width: 500px;
    text-align: left;
    margin-bottom: 40px;

}

.homepage-about-left h2 {
    font-family: 'Playfair Display', serif;
    font-size: 40px;
    letter-spacing: 1px;
    font-weight: bold;
    margin-bottom: 5px;
    white-space: nowrap;

}


.subheading {
    color: #666;
    font-size: 16px;
    margin-bottom: 30px;
    border-bottom: 2px solid #c3492c;
    padding-bottom: 10px;
    display: inline-block;

}

.homepage-about-image img {
    width: 100%;    
    max-width: 100%;  
    height: auto;          
    border-radius: 15px;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
    max-width: 500px;
    flex: 1;

}

.homepage-about-image{
    display: flex;
    align-items: center;
    gap: 50px;
    flex-wrap: wrap;

}

.homepage-about-right {
    flex: 1;
    /* max-width: 300px; */

}

.homepage-about-right p {

    font-size: 17px;
    line-height: 1.7;
    margin-bottom: 20px;
    text-align: justify;

}

.enter-button a {
    text-decoration: none;
    color: white;
}

.enter-button {
    background-color: #C3492C;
    color: #fff;
    padding: 12px 24px;
    border: none;
    border-radius: 8px;
    font-size: 16px;
    cursor: pointer;
    transition: background 0.3s ease;
}

.enter-button:hover {
    background-color: #a53e24;
}

@media screen and (max-width: 600px) {
  .homepage-about {
    flex-direction: column; 
    padding: 30px 5%;  
  }

  .homepage-about-left,
  .homepage-about-right,
  .homepage-about-image {
    max-width: 100%;
    text-align: center;     
  }

  .homepage-about-left h2 {
    white-space: normal;     
    font-size: 28px;      
  }

  .homepage-about-image img {
    width: 100%;
    max-width: 100%;
  }
}
/* Restyling topic section as carousle slide */
.topics-section {
    align-items: center;
    overflow: hidden;
}
/* ... */

